[tool.poetry]
version = "0.1.2-dev0"

authors = [
  "Matthew D. Scholefield <matthew331199@gmail.com>",
  "Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>",
]
description = "Intercept Python's standard logging and re-route the messages."
keywords = ["logging", "loguru"]
name = "logging-interceptor"
readme = "README.md"
repository = "https://github.com/imcf/logging-interceptor"

[tool.poetry.dependencies]
loguru = "^0.7.0"
python = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pdoc = "^13.1.1"
pylint = "^2.17.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
